--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-Hello World
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>Unitra</title>
+  <base href="/">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+<link rel="stylesheet" href="styles.1dd376347d94a4699ae4.css"></head>
+<body>
+  <app-root></app-root>
+<script type="text/javascript" src="runtime.afdff3c2fbe548c25b97.js"></script><script type="text/javascript" src="polyfills.9e08bf4ab57e117115ec.js"></script><script type="text/javascript" src="main.4c7363a7faeff58f4b9c.js"></script></body>
+</html>
